--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "babel-watch": "^7.4.1",
     "concat": "^1.0.3",
     "imagemin-cli": "^6.0.0",
-    "node-sass": "^5.0.0",
+    "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
     "pug": "^3.0.2",
-    "sass": "^1.41.0"
+    "pug-cli": "^1.0.0-alpha6",
+    "sass": "^1.75.0"
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
